CSS-fix focus only visible for keyboard-users

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -252,7 +252,7 @@ table {
 }
 
 * {
-    &:focus {
+    &:focus-visible {
         @include focus-outline();
     }
 }
@@ -264,7 +264,7 @@ a,
     cursor: pointer;
 
     &:hover,
-    &:focus {
+    &:focus-visible {
         text-decoration: none;
     }
 
@@ -293,7 +293,7 @@ a,
             }
         }
 
-        &:focus,
+        &:focus-visible,
         &:hover {
             outline: none !important;
         }
